@@ -11,6 +11,7 @@ Summary -- Release highlights
 
 New checkers
 ============
+* Fixed a false positive when a numpy ufunc returns a scalar in % string formatting.
 
 * Added new checker ``typevar-name-mismatch``: TypeVar must be assigned to a variable with the same name as its name argument.
 
